# Android-Native-Image-Processing-NDK

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/gagansai/imageprocessor/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/gagansai/imageprocessor/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/gagansai/imageprocessor/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
